@@ -1,3 +1,7 @@
+2004-07-20  Sam Steingold  <sds@gnu.org>
+
+	* modules/rawsock/rawsock.c (configdev): fixed STACK references
+
 2004-07-20  Bruno Haible  <bruno@clisp.org>
 
 	* clos-methcomb2.lisp (long-form-method-combination-collect-duplicates):
